--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "three": "^0.157.0",
+    "usehooks-ts": "^2.9.1",
     "vite-plugin-svgr": "^4.1.0"
   },
   "devDependencies": {
