--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/fiber": "^8.15.4",
     "clsx": "^2.0.0",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "framer-motion-3d": "^10.16.4",
     "react": "^18.2.0",
@@ -19,7 +20,8 @@
     "react-router-dom": "^6.17.0",
     "three": "^0.157.0",
     "usehooks-ts": "^2.9.1",
-    "vite-plugin-svgr": "^4.1.0"
+    "vite-plugin-svgr": "^4.1.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
